chore: 添加pull_request事件

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,10 +7,11 @@ on:
   pull_request:
     branches:
       - main
-    types: [close]
+    types: [closed]
 
 jobs:
   deploy:
+    if: (!(github.event.action == 'closed' && github.event.pull_request.merged != true))
     runs-on: ubuntu-22.04
     permissions:
       contents: write
