--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "rspack serve -c ./rspack.config.dev.js",
     "build": "rspack build -c ./rspack.config.pro.js",
     "preview": "rspack preview --port 3091",
+    "app:dev": "pnpm tauri dev",
+    "app:build": "tauri build --target x86_64-apple-darwin",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@fluentui/react-components": "^9.25.1",
     "@fluentui/react-icons": "^2.0.204",
     "@mario34/eslint-config-react": "^1.0.0",
+    "@tauri-apps/api": "^1.3.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "lodash-es": "^4.17.21",
