--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "rspack serve -c ./rspack.config.dev.js",
     "build": "rspack build -c ./rspack.config.pro.js",
+    "build:tauri": "rspack build -c ./rspack.config.tauri.js",
     "preview": "rspack preview --port 3091",
     "app:dev": "pnpm tauri dev",
     "app:build": "tauri build --target x86_64-apple-darwin",
@@ -13,6 +14,7 @@
   "dependencies": {
     "@fluentui/react-components": "^9.25.1",
     "@fluentui/react-icons": "^2.0.204",
+    "@fluentui/react-tags-preview": "^0.1.3",
     "@mario34/eslint-config-react": "^1.0.0",
     "@tauri-apps/api": "^1.3.0",
     "classnames": "^2.3.2",
