--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "preview": "rspack preview --port 3091",
     "app:dev": "pnpm tauri dev",
     "app:build": "tauri build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "bump:version": "node ./scripts/bump-version.js",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "eslint --fix"
   },
   "dependencies": {
     "@fluentui/react-components": "^9.25.1",
@@ -24,6 +29,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-angular": "^17.7.0",
     "@rspack/cli": "^0.2.8",
     "@tauri-apps/cli": "^1.3.1",
     "@types/lodash-es": "^4.17.7",
@@ -32,10 +39,15 @@
     "@types/wicg-file-system-access": "^2020.9.6",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "conventional-changelog-cli": "^3.0.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "husky": "^8.0.0",
+    "lint-staged": "^14.0.1",
+    "minimist": "^1.2.8",
     "sass": "^1.62.1",
+    "simple-git": "^3.19.1",
     "typescript": "^5.0.2"
   }
 }
