--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "1.1.1",
   "scripts": {
-    "dev": "rspack serve -c ./rspack.config.dev.js",
-    "build": "rspack build -c ./rspack.config.pro.js",
-    "build:tauri": "rspack build -c ./rspack.config.tauri.js",
-    "preview": "rspack preview --port 3091",
+    "dev": "rsbuild dev",
+    "build": "rsbuild build",
+    "build:tauri": "rsbuild build --env-mode tauri",
+    "preview": "rsbuild preview --port 3091",
     "app:dev": "pnpm tauri dev",
     "app:build": "tauri build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -31,7 +31,8 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-angular": "^17.7.0",
-    "@rspack/cli": "^0.2.8",
+    "@rsbuild/core": "^0.5.2",
+    "@rsbuild/plugin-react": "^0.5.2",
     "@tauri-apps/cli": "^1.3.1",
     "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.0.28",
